# topologyOptimizer

./: .gitignore  README.md  pyproject.toml  topology_aware_dynamics_spec_v2.md
configs/data/: gaussian_e1.yaml
configs/experiment_batches/: next_after_e1.yaml
configs/experiments/: e1.yaml  e1_colab.yaml  e1_smoke.yaml  e2_colab_gelu.yaml  e2_colab_relu.yaml  e2_nonlinear.yaml  e3_fullbatch.yaml  e3_largebatch_matched.yaml  e3_stochastic_matched.yaml  e8_oracle_local.yaml  e8_oracle_wide.yaml
configs/logging/: phase1.yaml
configs/model/: deep_linear_e1.yaml
configs/optimizer/: adamw.yaml
configs/predictor/: e1_predictors.yaml
notebooks/: colab_run_e1.ipynb
scripts/: build_dynamics_dataset.py  colab_setup.sh  evaluate_predictor.py  generate_trajectories.py  make_report.py  run_experiment_batch.py  run_online_optimizer.py  train_predictor.py
src/tad/: __init__.py  cli.py  config.py
src/tad/data/: __init__.py  base.py  covariance.py  gaussian.py  mixtures.py  schedules.py  teachers.py
src/tad/datasets/: __init__.py  preprocessing.py  trajectory_windows.py
src/tad/evaluation/: __init__.py  offline.py  online_optimizer.py  reports.py  temporal_structure.py
src/tad/logging/: __init__.py  probes.py  reader.py  schema.py  spectral.py  writer.py
tests/: conftest.py  test_candidate_updates.py  test_determinism.py  test_experiment_batch.py  test_gradients.py  test_logging_schema.py  test_model_registry.py  test_predictor_training.py  test_predictors.py  test_product_dynamics.py  test_replay.py  test_reports.py  test_subspace_metrics.py
(+31 files in other folders)
