[project]
name = "topology-aware-dynamics"
version = "0.1.0"
description = "TAD — Topology-Aware Prediction of Neural Network Training Dynamics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.3",
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
    "zarr>=3.0",
    "h5py>=3.10",
    "safetensors>=0.4",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
tad = "tad.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tad"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
